Correct build problems
